--- a/Fortnite Cosmetics Unlocker/Fortnite Cosmetics Unlocker.csproj
+++ b/Fortnite Cosmetics Unlocker/Fortnite Cosmetics Unlocker.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>804_20241231193622.ico</ApplicationIcon>
+    <ApplicationIcon>PIEIcon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BCMakeCert, Version=2.0.9.0, Culture=neutral, PublicKeyToken=67cb91587178ac5a, processorArchitecture=MSIL">
@@ -85,8 +85,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="804_20241231193622.ico" />
     <Content Include="BasicFormatsForCore.dll" />
+    <Content Include="PIEIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
